# FxPyTorch

./: LICENSE  README.md  pyproject.toml
fxp/: __init__.py  calibration.py  fxp_conv2d.py  fxp_dropout.py  fxp_layernorm.py  fxp_linear.py  fxp_lstm.py  fxp_multiheadattention.py  fxp_sigmoid.py  fxp_softmax.py  fxp_tanh.py  fxp_transformer_encoder.py  symmetric_quant.py  utils.py
tests/: fxp_tests.py
transparent/: __init__.py  activation_logger.py  trans_conv2d.py  trans_dropout.py  trans_layernorm.py  trans_linear.py  trans_lstm.py  trans_multiheadattention.py  trans_sigmoid.py  trans_softmax.py  trans_tanh.py  trans_transformer_encoder.py
